--- a/b5_ac_conect/scss/_variables_access.scss
+++ b/b5_ac_conect/scss/_variables_access.scss
@@ -17,5 +17,5 @@ $theme-colors: (
   "dark": $access-dark,
   "light": $access-light,
   "primary": $access-yellow,
-  "secondary": $access-medium
+  "secondary": $access-dark
 );
