--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -166,3 +166,16 @@ footer .social-link:hover {
     padding-top: 60px;
     padding-bottom: 60px;
 }
+
+.breadcrumb li {
+   a {
+       color: var(--teal-700);
+       text-decoration: none;
+       font-weight: 700;
+
+       &:hover {
+           color: var(--teal-600);
+           text-decoration: underline;
+       }
+   }
+}
