--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -179,3 +179,13 @@ footer .social-link:hover {
        }
    }
 }
+
+a {
+  color: var(--teal-600);
+  text-decoration: none;
+
+  &:hover {
+    color: var(--teal-600);
+    text-decoration: underline;
+  }
+}
