Adding the `container` class to the node content

--- a/b5_ac_conect/templates/site-pages/node.html.twig
+++ b/b5_ac_conect/templates/site-pages/node.html.twig
@@ -88,7 +88,7 @@
         </footer>
     {% endif %}
 
-    <div{{ content_attributes }}>
+    <div class="container" {{ content_attributes }}>
         {% block content %}
             {{ content }}
         {% endblock %}
