--- a/b5_ac_conect/scss/_variables_access.scss
+++ b/b5_ac_conect/scss/_variables_access.scss
@@ -12,6 +12,8 @@ $access-light: #ECF9F8;
 $access-light-rgb: 236, 249, 248;
 $access-yellow: #FFC42D;
 $access-yellow-rgb: 255, 196, 45;
+$access-orange: #F07537;
+$access-orange-rgb: 240, 117, 56;
 $access-secondary: #6c757d;
 
 
