--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -104,6 +104,24 @@ set footer_classes = ' ' ~
 
   <div>
     <div class="{{ b5_top_container }}">
+      <div class="border-dark text-end access-operations-navigation">
+        <ul class="list-inline m-0">
+          <li class="list-inline-item">
+            <a href="/pub/data_n_networking">Data & Networking</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="/pub/operational_support">Operations Support</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="/pub/cybersecurity">Cybersecurity</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="{{ b5_top_container }}">
     {% if page.breadcrumb %}
       {{ page.breadcrumb }}
     {% endif %}
