--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -190,7 +190,7 @@ footer .social-link:hover {
    }
 }
 
-a {
+a.btn.btn-link {
   color: black;
   text-decoration: underline;
   font-weight: bold;
@@ -227,7 +227,7 @@ h3, .h3 {
     //text-transform: uppercase;
 }
 
-.btn {
+.btn.btn-primary {
     border-radius: 0px;
     border-width: 2px;
     border-style: solid;
@@ -244,10 +244,35 @@ h3, .h3 {
     }
 }
 
-.text-orange {
+.text-orange, .btn.btn-link.text-orange {
     color: $access-orange;
 }
 
-.text-yellow {
+.text-yellow, .btn.btn-link.text-yellow {
     color: $access-yellow;
+}
+
+.access-operations-navigation {
+    border-color: $access-dark;
+    border-style: solid;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-top-width: 2px;
+
+    a {
+        color: $access-medium;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 11px;
+        padding: 6px 10px;
+        display: inline-block;
+
+        &:hover {
+            color: $access-dark;
+            text-decoration: underline;
+            font-weight: 600;
+        }
+    }
+
 }
