Fix accordion styles

--- a/b5_ac_conect/scss/_variables_bootstrap.scss
+++ b/b5_ac_conect/scss/_variables_bootstrap.scss
@@ -21,3 +21,7 @@ $form-text-margin-top: 0 !default;
 $legend-font-size: 1rem !default;
 $table-cell-padding-x: .75rem !default;
 
+$accordion-button-color:           $access-medium;
+
+$accordion-button-active-bg:              $access-light;
+$accordion-button-active-color:           $access-medium;
