--- a/b5_ac_conect/css/style.css
+++ b/b5_ac_conect/css/style.css
@@ -7921,7 +7921,10 @@ fieldset.form-item > .list-group + .card-footer {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
-.text-light, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active {
+.text-light, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active, .access-subdomain-global-navigation a.is-active,
+.access-subdomain-global-navigation span.nolink:hover,
+.access-subdomain-global-navigation span.nolink.active,
+.access-subdomain-global-navigation span.nolink.is-active {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-light-rgb), var(--bs-text-opacity)) !important;
 }
@@ -7987,7 +7990,10 @@ fieldset.form-item > .list-group + .card-footer {
   --bs-text-opacity: 1;
 }
 
-.bg-dark, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active {
+.bg-dark, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active, .access-subdomain-global-navigation a.is-active,
+.access-subdomain-global-navigation span.nolink:hover,
+.access-subdomain-global-navigation span.nolink.active,
+.access-subdomain-global-navigation span.nolink.is-active {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
 }
@@ -8012,7 +8018,8 @@ fieldset.form-item > .list-group + .card-footer {
   background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important;
 }
 
-.bg-white, .access-subdomain-global-navigation a {
+.bg-white, .access-subdomain-global-navigation a,
+.access-subdomain-global-navigation span.nolink {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
 }
@@ -11395,7 +11402,10 @@ body {
   font-family: "Archivo", Helvetica, Arial, sans-serif;
 }
 
-.bg-dark, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active {
+.bg-dark, .access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active, .access-subdomain-global-navigation a.is-active,
+.access-subdomain-global-navigation span.nolink:hover,
+.access-subdomain-global-navigation span.nolink.active,
+.access-subdomain-global-navigation span.nolink.is-active {
   background-color: #1A5B6E;
 }
 
@@ -11407,7 +11417,8 @@ body {
   background-color: #ECF9F8;
 }
 
-.text-medium, .access-subdomain-global-navigation a {
+.text-medium, .access-subdomain-global-navigation a,
+.access-subdomain-global-navigation span.nolink {
   color: #138597;
 }
 
@@ -11632,14 +11643,24 @@ h4, .h4 {
   border-bottom-width: 0px;
   border-top-width: 3px;
 }
-.access-subdomain-global-navigation a {
+.access-subdomain-global-navigation .block {
+  line-height: 10px;
+}
+.access-subdomain-global-navigation ul li .sf-sub-indicator {
+  display: none;
+}
+.access-subdomain-global-navigation a,
+.access-subdomain-global-navigation span.nolink {
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
   padding: 6px 10px;
   display: inline-block;
 }
-.access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active {
+.access-subdomain-global-navigation a:hover, .access-subdomain-global-navigation a.active, .access-subdomain-global-navigation .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .access-subdomain-global-navigation a.is-active, .access-subdomain-global-navigation a.is-active,
+.access-subdomain-global-navigation span.nolink:hover,
+.access-subdomain-global-navigation span.nolink.active,
+.access-subdomain-global-navigation span.nolink.is-active {
   text-decoration: none;
   font-weight: 600;
 }
