--- a/b5_ac_conect/scss/_styles_access.scss
+++ b/b5_ac_conect/scss/_styles_access.scss
@@ -270,16 +270,25 @@ h4, .h4 {
     border-bottom-width: 0px;
     border-top-width: 3px;
 
+    .block {
+        line-height: 10px;
+    }
+
     ul {
         @extend .d-inline-block;
         @extend .list-inline;
         li {
             @extend .list-inline-item;
             @extend .m-0;
+
+            .sf-sub-indicator {
+                display: none;
+            }
         }
     }
 
-    a {
+    a,
+    span.nolink {
         @extend .bg-white;
         @extend .text-medium;
 
@@ -290,7 +299,8 @@ h4, .h4 {
         display: inline-block;
 
         &:hover,
-        &.active {
+        &.active,
+        &.is-active {
             @extend .bg-dark;
             @extend .text-light;
 
